fix(Footer): not aligning correctly

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -36,3 +36,16 @@ html[data-theme="dark"] {
 html[data-theme="dark"] .docusaurus-highlight-code-line {
 	background-color: rgba(0, 0, 0, 0.3);
 }
+
+.footer__links {
+	justify-content: space-around;
+	align-items: center;
+}
+
+.footer__col,
+.footer__title,
+.footer__items,
+.footer__item {
+	width: fit-content !important;
+	flex: none !important;
+}
